Fix text align

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ h1 {
   font-weight: 700;
   color: #c0392b;
   margin-bottom: 30px;
+  text-align: left;
 }
 img {
   max-width: 100%;
